--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "mall-boss",
+  "name": "mall-manager",
   "version": "1.0.0",
   "scripts": {
     "dev": "vue-cli-service serve",
     "test": "vue-cli-service build --mode test",
-    "build": "vue-cli-service build",
-    "prod": "vue-cli-service build"
+    "build": "vue-cli-service build"
   },
   "dependencies": {
     "axios": "0.19.0",
@@ -13,7 +12,7 @@
     "js-cookie": "2.2.1",
     "normalize.css": "8.0.1",
     "nprogress": "0.2.0",
-    "path-to-regexp": "6.1.0",
+    "path-to-regexp": "3.0.0",
     "vue": "2.6.10",
     "vue-router": "3.1.2",
     "vuex": "3.1.2"
@@ -24,7 +23,6 @@
     "@vue/cli-plugin-babel": "3.6.0",
     "@vue/cli-service": "3.6.0",
     "@vue/test-utils": "1.0.0-beta.29",
-    "autoprefixer": "9.7.3",
     "babel-core": "7.0.0-bridge.0",
     "chalk": "2.4.2",
     "connect": "3.6.6",
@@ -46,6 +44,7 @@
   },
   "browserslist": [
     "> 1%",
-    "last 2 versions"
+    "last 2 versions",
+    "not ie <= 8"
   ]
 }
