--- a/package.json
+++ b/package.json
@@ -4,47 +4,54 @@
   "scripts": {
     "dev": "vue-cli-service serve",
     "test": "vue-cli-service build --mode test",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "lint": "eslint --ext .js,.vue src --fix"
   },
   "dependencies": {
-    "axios": "0.19.0",
+    "axios": "0.19.2",
     "element-ui": "2.13.0",
     "js-cookie": "2.2.1",
     "normalize.css": "8.0.1",
     "nprogress": "0.2.0",
     "path-to-regexp": "3.0.0",
-    "vue": "2.6.10",
-    "vue-router": "3.1.2",
-    "vuex": "3.1.2"
+    "vue": "2.6.11",
+    "vue-router": "3.1.6",
+    "vuex": "3.1.3"
   },
   "devDependencies": {
     "@babel/core": "7.0.0",
     "@babel/register": "7.0.0",
     "@vue/cli-plugin-babel": "3.6.0",
     "@vue/cli-service": "3.6.0",
-    "@vue/test-utils": "1.0.0-beta.29",
+    "@vue/test-utils": "1.0.0-beta.32",
     "babel-core": "7.0.0-bridge.0",
-    "chalk": "2.4.2",
-    "connect": "3.6.6",
-    "html-webpack-plugin": "3.2.0",
-    "mockjs": "1.0.1-beta3",
-    "node-sass": "^4.9.0",
-    "runjs": "^4.3.2",
-    "sass-loader": "^7.1.0",
-    "script-ext-html-webpack-plugin": "2.1.3",
+    "eslint": "6.8.0",
+    "babel-eslint": "10.1.0",
+    "eslint-plugin-vue": "6.2.2",
+    "prettier": "1.19.1",
+    "eslint-plugin-prettier": "3.1.2",
+    "eslint-config-prettier": "6.10.0",
+    "eslint-plugin-prettier-vue": "2.0.2",
+    "chalk": "3.0.0",
+    "connect": "3.7.0",
+    "mockjs": "1.1.0",
+    "node-sass": "4.13.1",
+    "tasksfile": "5.1.0",
+    "sass-loader": "8.0.2",
     "script-loader": "0.7.2",
-    "serve-static": "^1.13.2",
-    "svg-sprite-loader": "4.1.3",
+    "serve-static": "1.14.1",
+    "svg-sprite-loader": "4.2.1",
     "svgo": "1.3.2",
-    "vue-template-compiler": "2.6.10"
+    "vue-template-compiler": "2.6.11"
   },
   "engines": {
-    "node": ">=8.9",
-    "npm": ">= 3.0.0"
+    "node": ">= 9.0",
+    "npm": ">= 5.0.0"
   },
   "browserslist": [
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "private": true
 }
