--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "vue-cli-service serve",
-    "test": "vue-cli-service build --mode test",
+    "test": "vue-cli-service build --mode staging",
     "build": "vue-cli-service build",
-    "lint": "eslint --ext .js,.vue src --fix"
+    "lint": "eslint --ext .js,.vue src --fix",
+    "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml"
   },
   "dependencies": {
     "axios": "0.19.2",
@@ -20,11 +21,9 @@
   },
   "devDependencies": {
     "@babel/core": "7.0.0",
-    "@babel/register": "7.0.0",
-    "@vue/cli-plugin-babel": "3.6.0",
     "@vue/cli-service": "3.6.0",
-    "@vue/test-utils": "1.0.0-beta.32",
-    "babel-core": "7.0.0-bridge.0",
+    "@vue/cli-plugin-babel": "3.6.0",
+    "vue-template-compiler": "2.6.11",
     "eslint": "6.8.0",
     "babel-eslint": "10.1.0",
     "eslint-plugin-vue": "6.2.2",
@@ -32,17 +31,10 @@
     "eslint-plugin-prettier": "3.1.2",
     "eslint-config-prettier": "6.10.0",
     "eslint-plugin-prettier-vue": "2.0.2",
-    "chalk": "3.0.0",
-    "connect": "3.7.0",
-    "mockjs": "1.1.0",
-    "node-sass": "4.13.1",
-    "tasksfile": "5.1.0",
-    "sass-loader": "8.0.2",
-    "script-loader": "0.7.2",
-    "serve-static": "1.14.1",
     "svg-sprite-loader": "4.2.1",
     "svgo": "1.3.2",
-    "vue-template-compiler": "2.6.11"
+    "node-sass": "4.13.1",
+    "sass-loader": "8.0.2"
   },
   "engines": {
     "node": ">= 9.0",
