--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "mall-manager",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
     "dev": "vue-cli-service serve",
     "test": "vue-cli-service build --mode staging",
@@ -10,26 +11,26 @@
   },
   "dependencies": {
     "axios": "0.19.2",
-    "element-ui": "2.13.0",
+    "element-ui": "2.13.2",
     "js-cookie": "2.2.1",
     "normalize.css": "8.0.1",
     "nprogress": "0.2.0",
-    "path-to-regexp": "3.0.0",
+    "path-to-regexp": "3.2.0",
     "vue": "2.6.11",
-    "vue-router": "3.1.6",
-    "vuex": "3.1.3"
+    "vue-router": "3.2.0",
+    "vuex": "3.4.0"
   },
   "devDependencies": {
-    "@vue/cli-service": "3.12.1",
-    "@vue/cli-plugin-babel": "3.12.1",
-    "eslint": "6.8.0",
+    "@vue/cli-service": "4.3.1",
+    "@vue/cli-plugin-babel": "4.3.1",
+    "eslint": "7.0.0",
     "babel-eslint": "10.1.0",
     "eslint-plugin-vue": "6.2.2",
-    "prettier": "1.19.1",
-    "eslint-plugin-prettier": "3.1.2",
-    "eslint-config-prettier": "6.10.0",
-    "eslint-plugin-prettier-vue": "2.0.2",
-    "svg-sprite-loader": "4.2.1",
+    "prettier": "2.0.5",
+    "eslint-plugin-prettier": "3.1.3",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-plugin-prettier-vue": "2.1.0",
+    "svg-sprite-loader": "5.0.0",
     "svgo": "1.3.2",
     "node-sass": "4.14.1",
     "sass-loader": "8.0.2"
@@ -42,6 +43,5 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ],
-  "private": true
+  ]
 }
