--- a/package.json
+++ b/package.json
@@ -21,19 +21,19 @@
     "vuex": "3.4.0"
   },
   "devDependencies": {
-    "@vue/cli-service": "4.3.1",
     "@vue/cli-plugin-babel": "4.3.1",
-    "eslint": "7.0.0",
+    "@vue/cli-service": "4.3.1",
     "babel-eslint": "10.1.0",
-    "eslint-plugin-vue": "6.2.2",
-    "prettier": "2.0.5",
-    "eslint-plugin-prettier": "3.1.3",
+    "eslint": "7.0.0",
     "eslint-config-prettier": "6.11.0",
+    "eslint-plugin-prettier": "3.1.3",
     "eslint-plugin-prettier-vue": "2.1.0",
-    "svg-sprite-loader": "5.0.0",
-    "svgo": "1.3.2",
+    "eslint-plugin-vue": "6.2.2",
     "node-sass": "4.14.1",
-    "sass-loader": "8.0.2"
+    "prettier": "2.0.5",
+    "sass-loader": "8.0.2",
+    "svg-sprite-loader": "5.0.0",
+    "svgo": "1.3.2"
   },
   "engines": {
     "node": ">= 9.0",
