--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "normalize.css": "8.0.1",
     "nprogress": "0.2.0",
     "path-to-regexp": "3.2.0",
-    "vue": "2.6.11",
+    "vue": "2.6.12",
+    "vue-template-compiler": "2.6.12",
     "vue-router": "3.4.3",
     "vuex": "3.5.1"
   },
