--- a/package.json
+++ b/package.json
@@ -10,31 +10,32 @@
     "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml"
   },
   "dependencies": {
-    "axios": "0.21.2",
-    "element-ui": "2.15.1",
+    "axios": "0.26.1",
+    "core-js": "3.22.0",
+    "element-ui": "2.15.8",
     "js-cookie": "2.2.1",
     "normalize.css": "8.0.1",
     "nprogress": "0.2.0",
     "path-to-regexp": "3.2.0",
-    "vue": "2.6.12",
-    "vue-template-compiler": "2.6.12",
-    "vue-router": "3.5.1",
+    "vue": "2.6.14",
+    "vue-router": "3.5.3",
+    "vue-template-compiler": "2.6.14",
     "vuex": "3.6.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "4.5.13",
-    "@vue/cli-service": "4.5.13",
-    "babel-eslint": "10.1.0",
-    "eslint": "7.27.0",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-prettier": "3.4.0",
-    "eslint-plugin-prettier-vue": "3.0.0",
-    "eslint-plugin-vue": "7.9.0",
-    "node-sass": "7.0.0",
-    "prettier": "2.3.0",
-    "sass-loader": "10.1.1",
-    "svg-sprite-loader": "6.0.6",
-    "svgo": "2.3.0"
+    "@babel/eslint-parser": "7.17.0",
+    "@vue/cli-plugin-babel": "4.5.17",
+    "@vue/cli-service": "4.5.17",
+    "eslint": "7.32.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-prettier": "3.4.1",
+    "eslint-plugin-prettier-vue": "3.1.0",
+    "eslint-plugin-vue": "7.20.0",
+    "node-sass": "4.14.1",
+    "prettier": "2.6.2",
+    "sass-loader": "9.0.3",
+    "svg-sprite-loader": "6.0.11",
+    "svgo": "2.8.0"
   },
   "engines": {
     "node": ">= 8.9",
