--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vuex": "3.6.2"
   },
   "devDependencies": {
+    "@babel/core": "7.17.9",
     "@babel/eslint-parser": "7.17.0",
     "@vue/cli-plugin-babel": "4.5.17",
     "@vue/cli-service": "4.5.17",
@@ -35,7 +36,8 @@
     "prettier": "2.6.2",
     "sass-loader": "9.0.3",
     "svg-sprite-loader": "6.0.11",
-    "svgo": "2.8.0"
+    "svgo": "2.8.0",
+    "webpack": "5.72.0"
   },
   "engines": {
     "node": ">= 8.9",
