--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "3.22.0",
     "element-ui": "2.15.8",
     "js-cookie": "2.2.1",
+    "lodash": "4.17.21",
     "normalize.css": "8.0.1",
     "nprogress": "0.2.0",
     "path-to-regexp": "3.2.0",
