--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "vue-cli-service serve",
-    "test": "vue-cli-service build --mode staging",
-    "build": "vue-cli-service build",
-    "lint": "eslint --ext .js,.vue src --fix",
-    "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml"
+    "dev": "export NODE_OPTIONS=--openssl-legacy-provider; vue-cli-service serve",
+    "test": "export NODE_OPTIONS=--openssl-legacy-provider; vue-cli-service build --mode staging",
+    "build": "export NODE_OPTIONS=--openssl-legacy-provider; vue-cli-service build",
+    "lint": "export NODE_OPTIONS=--openssl-legacy-provider; eslint --ext .js,.vue src --fix",
+    "svgo": "export NODE_OPTIONS=--openssl-legacy-provider; svgo -f src/icons/svg --config=src/icons/svgo.yml"
   },
   "dependencies": {
     "axios": "0.26.1",
@@ -33,12 +33,12 @@
     "eslint-plugin-prettier": "3.4.1",
     "eslint-plugin-prettier-vue": "3.1.0",
     "eslint-plugin-vue": "7.20.0",
-    "node-sass": "4.14.1",
     "prettier": "2.6.2",
-    "sass-loader": "9.0.3",
+    "sass": "1.51.0",
+    "sass-loader": "10.2.1",
     "svg-sprite-loader": "6.0.11",
     "svgo": "2.8.0",
-    "webpack": "5.72.0"
+    "webpack": "5.72.1"
   },
   "engines": {
     "node": ">= 8.9",
