--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "svgo": "export NODE_OPTIONS=--openssl-legacy-provider; svgo -f src/icons/svg --config=src/icons/svgo.yml"
   },
   "dependencies": {
-    "axios": "0.26.1",
-    "core-js": "3.22.0",
+    "axios": "0.27.2",
+    "core-js": "3.22.5",
     "element-ui": "2.15.8",
-    "js-cookie": "2.2.1",
+    "js-cookie": "3.0.1",
     "lodash": "4.17.21",
     "normalize.css": "8.0.1",
     "nprogress": "0.2.0",
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@babel/core": "7.17.9",
     "@babel/eslint-parser": "7.17.0",
+    "@vue/babel-preset-app": "5.0.4",
     "@vue/cli-plugin-babel": "4.5.17",
     "@vue/cli-service": "4.5.17",
     "eslint": "7.32.0",
