--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "export NODE_OPTIONS=--openssl-legacy-provider; vue-cli-service serve",
-    "test": "export NODE_OPTIONS=--openssl-legacy-provider; vue-cli-service build --mode staging",
-    "build": "export NODE_OPTIONS=--openssl-legacy-provider; vue-cli-service build",
-    "lint": "export NODE_OPTIONS=--openssl-legacy-provider; eslint --ext .js,.vue src --fix",
+    "dev": "export NODE_OPTIONS=--openssl-legacy-provider; vue-cli-service serve --mode dev",
+    "test": "export NODE_OPTIONS=--openssl-legacy-provider; vue-cli-service build --mode test",
+    "build": "export NODE_OPTIONS=--openssl-legacy-provider; vue-cli-service build --mode prod",
     "svgo": "export NODE_OPTIONS=--openssl-legacy-provider; svgo -f src/icons/svg --config=src/icons/svgo.yml"
   },
   "dependencies": {
@@ -25,15 +24,9 @@
   },
   "devDependencies": {
     "@babel/core": "7.17.9",
-    "@babel/eslint-parser": "7.17.0",
     "@vue/babel-preset-app": "5.0.4",
     "@vue/cli-plugin-babel": "4.5.17",
     "@vue/cli-service": "4.5.17",
-    "eslint": "7.32.0",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-prettier": "3.4.1",
-    "eslint-plugin-prettier-vue": "3.1.0",
-    "eslint-plugin-vue": "7.20.0",
     "prettier": "2.6.2",
     "sass": "1.51.0",
     "sass-loader": "10.2.1",
