--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "export NODE_OPTIONS=--openssl-legacy-provider; vue-cli-service serve --mode dev",
-    "test": "export NODE_OPTIONS=--openssl-legacy-provider; vue-cli-service build --mode test",
-    "build": "export NODE_OPTIONS=--openssl-legacy-provider; vue-cli-service build --mode prod",
-    "svgo": "export NODE_OPTIONS=--openssl-legacy-provider; svgo -f src/icons/svg --config=src/icons/svgo.yml"
+    "dev": "vue-cli-service serve --mode dev",
+    "test": "vue-cli-service build --mode test",
+    "build": "vue-cli-service build --mode prod",
+    "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml"
   },
   "dependencies": {
     "axios": "0.27.2",
