--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "vue-cli-service serve --mode dev",
-    "test": "vue-cli-service build --mode test",
+    "test": "vue-cli-service serve --mode test",
     "build": "vue-cli-service build --mode prod",
     "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml"
   },
